
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int usec_t ;
typedef int AskPasswordFlags ;


 int ASK_PASSWORD_ACCEPT_CACHED ;
 int ASK_PASSWORD_NO_AGENT ;
 int ASK_PASSWORD_NO_TTY ;
 int ENOKEY ;
 int EUNATCH ;
 int STDIN_FILENO ;
 int ask_password_agent (char const*,char const*,char const*,char const*,int ,int,char***) ;
 int ask_password_keyring (char const*,int,char***) ;
 int ask_password_tty (int,char const*,char const*,int ,int,int *,char***) ;
 int assert (char***) ;
 scalar_t__ isatty (int ) ;

int ask_password_auto(
                const char *message,
                const char *icon,
                const char *id,
                const char *keyname,
                usec_t until,
                AskPasswordFlags flags,
                char ***ret) {

        int r;

        assert(ret);

        if ((flags & ASK_PASSWORD_ACCEPT_CACHED) &&
            keyname &&
            ((flags & ASK_PASSWORD_NO_TTY) || !isatty(STDIN_FILENO)) &&
            (flags & ASK_PASSWORD_NO_AGENT)) {
                r = ask_password_keyring(keyname, flags, ret);
                if (r != -ENOKEY)
                        return r;
        }

        if (!(flags & ASK_PASSWORD_NO_TTY) && isatty(STDIN_FILENO))
                return ask_password_tty(-1, message, keyname, until, flags, ((void*)0), ret);

        if (!(flags & ASK_PASSWORD_NO_AGENT))
                return ask_password_agent(message, icon, id, keyname, until, flags, ret);

        return -EUNATCH;
}
